# demo_uv

./: README.md  app_git.py  pyproject.toml  requirements.txt
data/: df_login.csv
