[project]
name = "demo-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "streamlit-authenticator>=0.4.2",
    "streamlit-option-menu>=0.4.0",
    "tabulate>=0.9.0",
]
